fixed spacing between topic buttons

--- a/public/explore/index.css
+++ b/public/explore/index.css
@@ -254,7 +254,7 @@ body{
     font-size: 13px !important;
     font-weight: bold !important;
     padding:10px !important;
-    margin-left:40px !important;
+    margin-left:5px !important;
     length:50px !important;
     background-color: #F1EFEF !important;
     border-radius: 15px !important;
